--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ android {
     defaultConfig {
         applicationId "au.com.wipro.newsfeed"
         minSdkVersion 25
+        //noinspection ExpiredTargetSdkVersion
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -24,12 +25,23 @@ android {
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
 }
 
-// KOTLIN
+// KOTLIN, ANKO
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.0.1'
+    implementation "org.jetbrains.anko:anko-sdk25:$anko_version"
+}
+
+// 3rd PARTY LIBS
+dependencies {
+    implementation("com.github.bumptech.glide:glide:4.8.0")
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 }
 
 // TESTING
