--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     ext.kotlin_version = '1.3.0'
     ext.anko_version = '0.10.7'
+    ext.kotlin_coroutines_version = '1.0.0'
 
     repositories {
         google()
