Add dependency injection
- inject into Activity, Fragment and ViewModels

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 28
@@ -37,6 +38,20 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.0.1'
     implementation "org.jetbrains.anko:anko-sdk25:$anko_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutines_version"
+}
+
+// DEPENDENCY INJECTION
+dependencies {
+    //$dagger_version
+    implementation("com.github.bumptech.glide:glide:4.8.0")
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+}
+dependencies {
+    implementation "com.google.dagger:dagger:$dagger_version"
+    implementation "com.google.dagger:dagger-android:$dagger_version"
+    implementation "com.google.dagger:dagger-android-support:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
+    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
 }
 
 // 3rd PARTY LIBS
