--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext.kotlin_version = '1.3.0'
     ext.anko_version = '0.10.7'
     ext.kotlin_coroutines_version = '1.0.0'
+    ext.dagger_version = '2.16'
 
     repositories {
         google()
